--- a/app/src/main/res/layout/activity_recommendation_details.xml
+++ b/app/src/main/res/layout/activity_recommendation_details.xml
@@ -375,25 +375,37 @@
             </LinearLayout>
 
 
-            <ListView
-                android:id="@+id/reviewsList"
-                android:layout_width="wrap_content"
-                android:layout_height="444dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="12dp"
-                android:layout_marginEnd="8dp"
-                android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.333"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/reviewsImageView"
-                app:layout_constraintVertical_bias="0.0" />
+            <android.support.constraint.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="End of Page" />
+                <ListView
+                    android:id="@+id/reviewsList"
+                    android:layout_width="wrap_content"
+                    android:layout_height="444dp"
+                    android:layout_marginStart="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_marginEnd="8dp"
+                    android:layout_marginBottom="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.333"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintVertical_bias="0.0" />
+
+                <TextView
+                    android:id="@+id/noActivityText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserrat"
+                    android:textSize="24sp"
+                    app:layout_constraintEnd_toEndOf="@+id/reviewsList"
+                    app:layout_constraintStart_toStartOf="@+id/reviewsList"
+                    app:layout_constraintTop_toTopOf="@+id/reviewsList" />
+
+            </android.support.constraint.ConstraintLayout>
+
 
 
         </LinearLayout>
