--- a/app/src/main/res/layout/activity_reset_password.xml
+++ b/app/src/main/res/layout/activity_reset_password.xml
@@ -8,8 +8,8 @@
     tools:context=".ResetPasswordActivity">
 
     <LinearLayout
-        android:layout_width="417dp"
-        android:layout_height="206dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
