--- a/app/src/main/res/layout/activity_home_page_2.xml
+++ b/app/src/main/res/layout/activity_home_page_2.xml
@@ -168,7 +168,8 @@
                 android:id="@+id/homepageQuestionMark"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
-                android:src="@drawable/question" />
+                android:paddingLeft="5dp"
+                android:src="@drawable/questionmark" />
 
         </LinearLayout>
 
